--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -21,6 +21,7 @@ plugins/clock/clock.c
 plugins/pager/pager.c
 plugins/switcher/switcher.c
 plugins/systembuttons/systembuttons.c
+plugins/separator/separator.c
 plugins/mailcheck/mailcheck.c
 
 
