--- a/Makefile.in
+++ b/Makefile.in
@@ -213,8 +213,7 @@ RECURSIVE_TARGETS = info-recursive dvi-recursive pdf-recursive \
 DIST_COMMON = README AUTHORS COPYING ChangeLog INSTALL Makefile.am \
 	Makefile.in NEWS TODO aclocal.m4 compile config.guess \
 	config.h.in config.sub configure configure.ac depcomp \
-	install-sh ltconfig ltmain.sh missing mkinstalldirs \
-	xfce4.spec.in
+	install-sh ltmain.sh missing mkinstalldirs xfce4.spec.in
 DIST_SUBDIRS = $(SUBDIRS)
 all: config.h
 	$(MAKE) $(AM_MAKEFLAGS) all-recursive
