--- a/Makefile.in
+++ b/Makefile.in
@@ -175,12 +175,12 @@ sysconfdir = @sysconfdir@
 target_alias = @target_alias@
 
 confdir = $(sysconfdir)/xfce4
-conf_DATA = xfce4rc xfce4rc.nl
+conf_DATA = xfce4rc xfce4rc.nl xfcerc.ca
 
 EXTRA_DIST = \
 	HACKING								\
 	NOTES								\
-	xfce4rc							\
+	$(conf_DATA)							\
 	xfce4.spec							\
 	.indent.pro
 
