bleh, silly typo.
(Old svn revision: 3816)

--- a/Makefile.in
+++ b/Makefile.in
@@ -175,7 +175,7 @@ sysconfdir = @sysconfdir@
 target_alias = @target_alias@
 
 confdir = $(sysconfdir)/xfce4
-conf_DATA = xfce4rc xfce4rc.nl xfcerc.ca
+conf_DATA = xfce4rc xfce4rc.nl xfce4rc.ca
 
 EXTRA_DIST = \
 	HACKING								\
