--- a/Makefile.am
+++ b/Makefile.am
@@ -1,7 +1,11 @@
 @SET_MAKE@
 
 confdir = $(sysconfdir)/xfce4
-conf_DATA = xfce4rc xfce4rc.nl xfce4rc.ca
+conf_DATA = 								\
+	xfce4rc 							\
+	xfce4rc.nl 							\
+	xfce4rc.ca							\
+	xfce4rc.hu
 
 EXTRA_DIST = 								\
 	HACKING								\
