--- a/Makefile.in
+++ b/Makefile.in
@@ -175,7 +175,12 @@ sysconfdir = @sysconfdir@
 target_alias = @target_alias@
 
 confdir = $(sysconfdir)/xfce4
-conf_DATA = xfce4rc xfce4rc.nl xfce4rc.ca
+conf_DATA = \
+	xfce4rc 							\
+	xfce4rc.nl 							\
+	xfce4rc.ca							\
+	xfce4rc.hu
+
 
 EXTRA_DIST = \
 	HACKING								\
