--- a/configure.ac
+++ b/configure.ac
@@ -59,6 +59,8 @@ Makefile
 doc/Makefile
 doc/C/Makefile
 doc/C/images/Makefile
+doc/fr/Makefile
+doc/fr/images/Makefile
 po/Makefile.in
 icons/Makefile
 panel/Makefile
