--- a/Makefile.am
+++ b/Makefile.am
@@ -5,7 +5,8 @@ conf_DATA = 								\
 	xfce4rc 							\
 	xfce4rc.nl 							\
 	xfce4rc.ca							\
-	xfce4rc.hu
+	xfce4rc.hu							\
+	xfce4rc.vi
 
 EXTRA_DIST = 								\
 	HACKING								\
