--- a/configure.ac
+++ b/configure.ac
@@ -32,7 +32,7 @@ AC_CHECK_HEADERS([signal.h stddef.h sys/wait.h time.h])
 AC_CHECK_FUNCS([sigaction])
 
 dnl Check for i18n support
-BM_I18N([xfce4-panel], [ca cs de es es_MX fr fi hi hu it lt ms nl ja ko pl
+BM_I18N([xfce4-panel], [az ca cs de es es_MX fr fi hi hu it lt ms nl ja ko pl
    pt_PT ru sv ta tr vi zh_CN zh_TW])
 
 dnl Check for X11 installed
