Add Azerbaijani translations
(Old svn revision: 3927)

--- a/Makefile.in
+++ b/Makefile.in
@@ -177,6 +177,7 @@ target_alias = @target_alias@
 confdir = $(sysconfdir)/xfce4
 conf_DATA = \
 	xfce4rc 							\
+	xfce4rc.az 							\
 	xfce4rc.nl 							\
 	xfce4rc.ca							\
 	xfce4rc.hu							\
