--- a/Makefile.am
+++ b/Makefile.am
@@ -3,9 +3,11 @@
 confdir = $(sysconfdir)/xfce4
 conf_DATA = 								\
 	xfce4rc 							\
+	xfce4rc.az 							\
 	xfce4rc.nl 							\
 	xfce4rc.ca							\
-	xfce4rc.hu
+	xfce4rc.hu							\
+	xfce4rc.vi
 
 EXTRA_DIST = 								\
 	HACKING								\
