--- a/Makefile.in
+++ b/Makefile.in
@@ -177,9 +177,11 @@ target_alias = @target_alias@
 confdir = $(sysconfdir)/xfce4
 conf_DATA = \
 	xfce4rc 							\
+	xfce4rc.az 							\
 	xfce4rc.nl 							\
 	xfce4rc.ca							\
-	xfce4rc.hu
+	xfce4rc.hu							\
+	xfce4rc.vi
 
 
 EXTRA_DIST = \
