Completion combo support. I'll probably be changing this a bit later.
(Old svn revision: 3952)

--- a/Makefile.in
+++ b/Makefile.in
@@ -78,6 +78,9 @@ INSTALL_STRIP_PROGRAM = @INSTALL_STRIP_PROGRAM@
 INSTOBJEXT = @INSTOBJEXT@
 INTLLIBS = @INTLLIBS@
 LDFLAGS = @LDFLAGS@
+LIBDBH_CFLAGS = @LIBDBH_CFLAGS@
+LIBDBH_LIBS = @LIBDBH_LIBS@
+LIBDBH_REQUIRED_VERSION = @LIBDBH_REQUIRED_VERSION@
 LIBOBJS = @LIBOBJS@
 LIBS = @LIBS@
 LIBSTARTUP_NOTIFICATION_CFLAGS = @LIBSTARTUP_NOTIFICATION_CFLAGS@
