--- a/config.h.in
+++ b/config.h.in
@@ -30,6 +30,9 @@
 /* Define if your <locale.h> file defines LC_MESSAGES. */
 #undef HAVE_LC_MESSAGES
 
+/* Define if you have dbh-1.0 >= 1.0 */
+#undef HAVE_LIBDBH
+
 /* Define if you have libstartup-notification-1.0 >= 0.5 */
 #undef HAVE_LIBSTARTUP_NOTIFICATION
 
