--- a/configure.ac
+++ b/configure.ac
@@ -43,6 +43,10 @@ BM_DEPEND([LIBXFCE4MCS_CLIENT], [libxfce4mcs-client-1.0], [4.0.0])
 BM_DEPEND([LIBXFCEGUI4], [libxfcegui4-1.0], [4.0.0])
 BM_DEPEND([LIBXML], [libxml-2.0], [2.4.0])
 
+dnl Check for dbh installed
+BM_DEPEND_CHECK([LIBDBH], [dbh-1.0], [1.0],
+  [dbh], [DBH library], [yes])
+
 dnl Configure the mcs plugin
 XFCE_MCS_PLUGIN([XFCE_MCS_MANAGER], [4.0.0])
 
