--- a/themes/XFce/Makefile.in
+++ b/themes/XFce/Makefile.in
@@ -78,6 +78,9 @@ INSTALL_STRIP_PROGRAM = @INSTALL_STRIP_PROGRAM@
 INSTOBJEXT = @INSTOBJEXT@
 INTLLIBS = @INTLLIBS@
 LDFLAGS = @LDFLAGS@
+LIBDBH_CFLAGS = @LIBDBH_CFLAGS@
+LIBDBH_LIBS = @LIBDBH_LIBS@
+LIBDBH_REQUIRED_VERSION = @LIBDBH_REQUIRED_VERSION@
 LIBOBJS = @LIBOBJS@
 LIBS = @LIBS@
 LIBSTARTUP_NOTIFICATION_CFLAGS = @LIBSTARTUP_NOTIFICATION_CFLAGS@
