added xfcombo.h since its needed by item_dialog.h... jasper, please run automake over that and commit the .in stuff :)
(Old svn revision: 3958)

--- a/panel/Makefile.am
+++ b/panel/Makefile.am
@@ -43,7 +43,8 @@ xfce4_panelinclude_HEADERS =					\
 	item_dialog.h						\
 	plugins.h 						\
 	xfce_support.h 						\
-	xfce.h 
+	xfce.h 							\
+	xfcombo.h
 
 xfce4_panel_CFLAGS = 							\
 	-I$(top_srcdir)							\
