--- a/panel/Makefile.in
+++ b/panel/Makefile.in
@@ -222,7 +222,8 @@ xfce4_panelinclude_HEADERS = \
 	item_dialog.h						\
 	plugins.h 						\
 	xfce_support.h 						\
-	xfce.h 
+	xfce.h 							\
+	xfcombo.h
 
 
 xfce4_panel_CFLAGS = \
