Add/update i18n for: Bulgarian from Miroslav Yordanov <miordanov@i-space.org> and Peter Slavov <peshka@i-space.org> Italian from Alex Dupre <ale@FreeBSD.org> Arabic from Saleh Hathal <hathalsal@hotmail.com>
(Old svn revision: 3985)

--- a/configure.ac
+++ b/configure.ac
@@ -7,7 +7,7 @@ dnl
 
 AC_INIT([panel/main.c])
 
-AM_INIT_AUTOMAKE([xfce4-panel], [4.0.4])
+AM_INIT_AUTOMAKE([xfce4-panel], [4.0.5])
 
 AM_CONFIG_HEADER([config.h])
 
@@ -32,7 +32,7 @@ AC_CHECK_HEADERS([signal.h stddef.h sys/wait.h time.h])
 AC_CHECK_FUNCS([sigaction])
 
 dnl Check for i18n support
-BM_I18N([xfce4-panel], [az ca cs de es es_MX fa_IR fr fi hi hu lt ms nl
+BM_I18N([xfce4-panel], [ar az bg ca cs de es es_MX fa_IR fr fi hi hu it lt ms nl
 	 ja ko no pl pt_BR pt_PT ru sv ta tr uk vi zh_CN zh_TW])
 
 dnl Check for X11 installed
