--- a/Makefile.in
+++ b/Makefile.in
@@ -218,10 +218,12 @@ target_alias = @target_alias@
 confdir = $(sysconfdir)/xfce4
 conf_DATA = \
 	xfce4rc 							\
+	xfce4rc.ar							\
 	xfce4rc.az 							\
-	xfce4rc.nl 							\
 	xfce4rc.ca							\
 	xfce4rc.hu							\
+	xfce4rc.it							\
+	xfce4rc.nl 							\
 	xfce4rc.vi
 
 EXTRA_DIST = \
