--- a/Makefile.am
+++ b/Makefile.am
@@ -3,12 +3,14 @@
 confdir = $(sysconfdir)/xfce4
 conf_DATA = 								\
 	xfce4rc 							\
+	xfce4rc.ar							\
 	xfce4rc.az 							\
-	xfce4rc.nl 							\
 	xfce4rc.ca							\
+	xfce4rc.hu							\
+	xfce4rc.it							\
 	xfce4rc.ms							\
-	xfce4rc.vi							\
-	xfce4rc.hu
+	xfce4rc.nl 							\
+	xfce4rc.vi
 
 EXTRA_DIST = 								\
 	HACKING								\
