move panel icon themes to $datadir/xfce4/icons
(Old svn revision: 3994)

--- a/themes/Crystal/Makefile.in
+++ b/themes/Crystal/Makefile.in
@@ -202,7 +202,7 @@ sbindir = @sbindir@
 sharedstatedir = @sharedstatedir@
 sysconfdir = @sysconfdir@
 target_alias = @target_alias@
-Crystaldir = $(datadir)/xfce4/themes/Crystal
+Crystaldir = $(datadir)/xfce4/icons/Crystal
 Crystal_DATA = \
 	README			\
 	index.theme
