--- a/themes/FreeIcons/Makefile.in
+++ b/themes/FreeIcons/Makefile.in
@@ -202,7 +202,7 @@ sbindir = @sbindir@
 sharedstatedir = @sharedstatedir@
 sysconfdir = @sysconfdir@
 target_alias = @target_alias@
-FreeIconsdir = $(datadir)/xfce4/themes/FreeIcons
+FreeIconsdir = $(datadir)/xfce4/icons/FreeIcons
 FreeIcons_DATA = \
 	README			\
 	index.theme
