--- a/themes/Gnome/Makefile.in
+++ b/themes/Gnome/Makefile.in
@@ -202,7 +202,7 @@ sbindir = @sbindir@
 sharedstatedir = @sharedstatedir@
 sysconfdir = @sysconfdir@
 target_alias = @target_alias@
-Gnomedir = $(datadir)/xfce4/themes/Gnome
+Gnomedir = $(datadir)/xfce4/icons/gnome
 Gnome_DATA = \
 	index.theme
 
