--- a/themes/Makefile.am
+++ b/themes/Makefile.am
@@ -6,3 +6,7 @@ SUBDIRS = 								\
 	Crystal 							\
 	FreeIcons
 
+install-data-hook:
+	cd $(DESTDIR)$(datadir)/xfce4/icons && \
+	  rm -f hicolor && \
+	  $(LN_S) Curve hicolor
