--- a/themes/Noia/Makefile.in
+++ b/themes/Noia/Makefile.in
@@ -202,7 +202,7 @@ sbindir = @sbindir@
 sharedstatedir = @sharedstatedir@
 sysconfdir = @sysconfdir@
 target_alias = @target_alias@
-Noiadir = $(datadir)/xfce4/themes/Noia
+Noiadir = $(datadir)/xfce4/icons/Noia
 Noia_DATA = \
 	README			\
 	index.theme
