--- a/themes/XFce/Makefile.in
+++ b/themes/XFce/Makefile.in
@@ -202,7 +202,7 @@ sbindir = @sbindir@
 sharedstatedir = @sharedstatedir@
 sysconfdir = @sysconfdir@
 target_alias = @target_alias@
-XFcedir = $(datadir)/xfce4/themes/XFce
+XFcedir = $(datadir)/xfce4/icons/XFce
 XFce_DATA = \
 	index.theme
 
