--- a/themes/Curve/Makefile.in
+++ b/themes/Curve/Makefile.in
@@ -202,7 +202,7 @@ sbindir = @sbindir@
 sharedstatedir = @sharedstatedir@
 sysconfdir = @sysconfdir@
 target_alias = @target_alias@
-Curvedir = $(datadir)/xfce4/themes/Curve
+Curvedir = $(datadir)/xfce4/icons/Curve
 Curve_DATA = \
 	README			\
 	index.theme
