--- a/themes/Makefile.in
+++ b/themes/Makefile.in
@@ -454,6 +454,8 @@ info: info-recursive
 info-am:
 
 install-data-am:
+	@$(NORMAL_INSTALL)
+	$(MAKE) $(AM_MAKEFLAGS) install-data-hook
 
 install-exec-am:
 
@@ -496,6 +498,11 @@ uninstall-info: uninstall-info-recursive
 	mostlyclean-recursive pdf pdf-am ps ps-am tags tags-recursive \
 	uninstall uninstall-am uninstall-info-am
 
+
+install-data-hook:
+	cd $(DESTDIR)$(datadir)/xfce4/icons && \
+	  rm -f hicolor && \
+	  $(LN_S) Curve hicolor
 # Tell versions [3.59,3.63) of GNU make to not export all variables.
 # Otherwise a system limit (for SysV at least) may be exceeded.
 .NOEXPORT:
