make panel use new icon theme location (and also make it use xfce_load_themed_icon(), duh...).  bump libxfcegui4 version requirement to 4.1.11
(Old svn revision: 3995)

--- a/panel/xfce4-panel-1.0.pc.in
+++ b/panel/xfce4-panel-1.0.pc.in
@@ -5,7 +5,7 @@ libdir=@libdir@
 includedir=@includedir@
 
 pluginsdir=${libdir}/xfce4/panel-plugins
-themesdir=${datadir}/xfce4/themes
+themesdir=${datadir}/xfce4/icons
 
 Name: xfce4-panel
 Description: XFce4 desktop panel
