--- a/configure.ac
+++ b/configure.ac
@@ -7,7 +7,7 @@ dnl
 
 AC_INIT([panel/main.c])
 
-AM_INIT_AUTOMAKE([xfce4-panel], [4.1.3])
+AM_INIT_AUTOMAKE([xfce4-panel], [4.1.4])
 
 AM_CONFIG_HEADER([config.h])
 
@@ -21,6 +21,7 @@ AC_MINIX
 dnl Check for basic programs
 AC_PROG_CC
 AC_PROG_INSTALL
+AC_PROG_LN_S
 
 dnl disable static libs
 AC_DISABLE_STATIC
@@ -40,7 +41,7 @@ BM_LIBX11_REQUIRE
 
 dnl Check for required packages
 BM_DEPEND([LIBXFCE4MCS_CLIENT], [libxfce4mcs-client-1.0], [4.0.0])
-BM_DEPEND([LIBXFCEGUI4], [libxfcegui4-1.0], [4.1.8])
+BM_DEPEND([LIBXFCEGUI4], [libxfcegui4-1.0], [4.1.11])
 BM_DEPEND([LIBXML], [libxml-2.0], [2.4.0])
 
 dnl Check for dbh installed
