Gratuitous spamming of commits list: changed all occurances of XFce to Xfce; Olivier told me once he prefered that. Sorry.
(Old svn revision: 4005)

--- a/configure.ac
+++ b/configure.ac
@@ -1,6 +1,6 @@
 dnl configure.ac
 dnl
-dnl xfce4 - panel for the XFce Desktop environment
+dnl xfce4 - panel for the Xfce Desktop environment
 dnl
 dnl 2003 Benedikt Meurer <benedikt.meurer@unix-ag.uni-siegen.de>
 dnl
