--- a/xfce4.spec.in
+++ b/xfce4.spec.in
@@ -21,7 +21,7 @@ BuildRequires: 	libxml2-devel >= @LIBXML_REQUIRED_VERSION@
 #BuildRequires: 	glib2-devel >= @GLIB_REQUIRED_VERSION@
 
 %description
-xfce4-panel is the panel for the XFce desktop environment
+xfce4-panel is the panel for the Xfce desktop environment
 
 # These are all required to have a properly functioning panel, so they should 
 # not be separate IMO -- Jasper
