--- a/panel/xfce4-panel-1.0.pc.in
+++ b/panel/xfce4-panel-1.0.pc.in
@@ -8,7 +8,7 @@ pluginsdir=${libdir}/xfce4/panel-plugins
 themesdir=${datadir}/xfce4/icons
 
 Name: xfce4-panel
-Description: XFce4 desktop panel
+Description: Xfce4 desktop panel
 Requires: libxfcegui4-1.0 libxml-2.0
 Version: @VERSION@
 Libs: -L${libdir}
