--- a/settings/Makefile.in
+++ b/settings/Makefile.in
@@ -243,6 +243,7 @@ libxfce4settings_la_LIBADD = \
 
 appsdir = $(datadir)/applications
 apps_DATA = xfce-panel-settings.desktop
+EXTRA_DIST = xfce-panel-settings.desktop
 all: all-am
 
 .SUFFIXES:
