Add a new sample plugin to the panel. It will not be installed.
(Old svn revision: 4026)

--- a/configure.ac
+++ b/configure.ac
@@ -82,6 +82,7 @@ plugins/clock/Makefile
 plugins/switcher/Makefile
 plugins/systembuttons/Makefile
 plugins/pager/Makefile
+plugins/sample-plugin/Makefile
 plugins/separator/Makefile
 settings/Makefile
 themes/Makefile
