A bit of a proof of concept for icon theme handling.
(Old svn revision: 4027)

--- a/icons/Makefile.am
+++ b/icons/Makefile.am
@@ -1,3 +1,7 @@
+hicolordir = $(datadir)/icons/hicolor/48x48/apps
+
+hicolor_DATA = xfce-mail.png
+
 noinst_DATA = xfce4-panel-icon.h xfce4-panel.png
 
 EXTRA_DIST = $(noinst_DATA)
@@ -6,4 +10,3 @@ xfce4-panel-icon.h: $(srcdir)/xfce4-panel.png
 	gdk-pixbuf-csource --raw --build-list 				\
 	panel_icon_data $(srcdir)/xfce4-panel.png > xfce4-panel-icon.h
 
-all: xfce4-panel-icon.h
