Add french localization of default config from LiNuCe <linuce@wanadoo.fr>
(Old svn revision: 4058)

--- a/Makefile.in
+++ b/Makefile.in
@@ -221,6 +221,7 @@ conf_DATA = \
 	xfce4rc.ar							\
 	xfce4rc.az 							\
 	xfce4rc.ca							\
+	xfce4rc.fr 							\
 	xfce4rc.hu							\
 	xfce4rc.it							\
 	xfce4rc.nl 							\
