Patch by brian to add threading to the panel.
(Old svn revision: 4083)

--- a/configure.ac
+++ b/configure.ac
@@ -7,7 +7,7 @@ dnl
 
 AC_INIT([panel/main.c])
 
-AM_INIT_AUTOMAKE([xfce4-panel], [4.1.6])
+AM_INIT_AUTOMAKE([xfce4-panel], [4.1.7])
 
 AM_CONFIG_HEADER([config.h])
 
@@ -40,6 +40,7 @@ dnl Check for X11 installed
 BM_LIBX11_REQUIRE
 
 dnl Check for required packages
+BM_DEPEND([GTHREAD], [gthread-2.0], [2.0.6])
 BM_DEPEND([LIBXFCE4MCS_CLIENT], [libxfce4mcs-client-1.0], [4.0.0])
 BM_DEPEND([LIBXFCEGUI4], [libxfcegui4-1.0], [4.1.19])
 BM_DEPEND([LIBXML], [libxml-2.0], [2.4.0])
