--- a/panel/Makefile.in
+++ b/panel/Makefile.in
@@ -136,6 +136,9 @@ FFLAGS = @FFLAGS@
 GETTEXT_PACKAGE = @GETTEXT_PACKAGE@
 GMOFILES = @GMOFILES@
 GMSGFMT = @GMSGFMT@
+GTHREAD_CFLAGS = @GTHREAD_CFLAGS@
+GTHREAD_LIBS = @GTHREAD_LIBS@
+GTHREAD_REQUIRED_VERSION = @GTHREAD_REQUIRED_VERSION@
 INSTALL_DATA = @INSTALL_DATA@
 INSTALL_PROGRAM = @INSTALL_PROGRAM@
 INSTALL_SCRIPT = @INSTALL_SCRIPT@
@@ -297,6 +300,7 @@ xfce4_panel_CFLAGS = \
 	@LIBXFCEGUI4_CFLAGS@						\
 	@LIBXFCE4MCS_CLIENT_CFLAGS@					\
 	@LIBXML_CFLAGS@							\
+	@GTHREAD_CFLAGS@						\
 	-DDATADIR=\"$(datadir)/xfce4\"					\
 	-DLIBDIR=\"$(libdir)/xfce4\"					\
 	-DSYSCONFDIR=\"$(sysconfdir)\"					\
@@ -308,6 +312,7 @@ xfce4_panel_LDFLAGS = \
 xfce4_panel_LDADD = \
 	@LIBSTARTUP_NOTIFICATION_LIBS@					\
 	@LIBX11_LIBS@							\
+	@GTHREAD_LIBS@							\
 	@LIBXFCEGUI4_LIBS@						\
 	@LIBXFCE4MCS_CLIENT_LIBS@					\
 	@LIBXML_LIBS@							\
