--- a/panel/Makefile.am
+++ b/panel/Makefile.am
@@ -57,6 +57,7 @@ xfce4_panel_CFLAGS = 							\
 	@LIBXFCEGUI4_CFLAGS@						\
 	@LIBXFCE4MCS_CLIENT_CFLAGS@					\
 	@LIBXML_CFLAGS@							\
+	@GTHREAD_CFLAGS@						\
 	-DDATADIR=\"$(datadir)/xfce4\"					\
 	-DLIBDIR=\"$(libdir)/xfce4\"					\
 	-DSYSCONFDIR=\"$(sysconfdir)\"					\
@@ -68,6 +69,7 @@ xfce4_panel_LDFLAGS =							\
 xfce4_panel_LDADD =							\
 	@LIBSTARTUP_NOTIFICATION_LIBS@					\
 	@LIBX11_LIBS@							\
+	@GTHREAD_LIBS@							\
 	@LIBXFCEGUI4_LIBS@						\
 	@LIBXFCE4MCS_CLIENT_LIBS@					\
 	@LIBXML_LIBS@							\
