well that's an annoying typo... depending on libxfcegui4 twice but libxfce4util not at all
(Old svn revision: 4090)

--- a/configure.ac
+++ b/configure.ac
@@ -42,7 +42,7 @@ BM_LIBX11_REQUIRE
 dnl Check for required packages
 BM_DEPEND([GTHREAD], [gthread-2.0], [2.0.6])
 BM_DEPEND([LIBXFCE4MCS_CLIENT], [libxfce4mcs-client-1.0], [4.0.0])
-BM_DEPEND([LIBXFCE4UTIL], [libxfcegui4-1.0], [4.1.13])
+BM_DEPEND([LIBXFCE4UTIL], [libxfce4util-1.0], [4.1.13])
 BM_DEPEND([LIBXFCEGUI4], [libxfcegui4-1.0], [4.1.19])
 BM_DEPEND([LIBXML], [libxml-2.0], [2.4.0])
 
