Resync with repository, most notably: - libxfcegui4 fixes with gtk 2.2 - xfwm4 updates - Present panel plugins in alphabetical order - Fix add plugin dialog being placed over the panel when using SM - French po updates - Other various small bug fixes
(Old svn revision: 4102)

--- a/settings/xfce-panel-settings.desktop
+++ b/settings/xfce-panel-settings.desktop
@@ -1,7 +1,9 @@
 [Desktop Entry]
 Encoding=UTF-8
 Name=Xfce 4 Panel Settings
+Name[fr]=Paramètres du panneau Xfce 4
 Comment=Panel Settings
+Comment[fr]=Paramétrage du panneau
 Exec=xfce-setting-show xfce
 Icon=xfce4-panel
 Terminal=false
