Rip out thread support. threads + gtk == trouble ;-)
(Old svn revision: 4104)

--- a/configure.ac
+++ b/configure.ac
@@ -7,7 +7,7 @@ dnl
 
 AC_INIT([panel/main.c])
 
-AM_INIT_AUTOMAKE([xfce4-panel], [4.1.7])
+AM_INIT_AUTOMAKE([xfce4-panel], [4.1.8])
 
 AM_CONFIG_HEADER([config.h])
 
@@ -41,21 +41,19 @@ dnl Check for X11 installed
 BM_LIBX11_REQUIRE
 
 dnl Check for required packages
-BM_DEPEND([GTHREAD], [gthread-2.0], [2.0.6])
 BM_DEPEND([LIBXFCE4MCS_CLIENT], [libxfce4mcs-client-1.0], [4.0.0])
 BM_DEPEND([LIBXFCE4UTIL], [libxfce4util-1.0], [4.1.13])
 BM_DEPEND([LIBXFCEGUI4], [libxfcegui4-1.0], [4.1.19])
 BM_DEPEND([LIBXML], [libxml-2.0], [2.4.0])
+
+dnl disable threading, too much trouble for too little gain
+dnl BM_DEPEND([GTHREAD], [gthread-2.0], [2.0.6])
 
 dnl Check for dbh installed for completion combo
 dnl disable for now, doesn't work for new install, only after
 dnl  combo has been used in xffm or xfrun.
 dnl BM_DEPEND_CHECK([LIBDBH], [dbh-1.0], [1.0],
 dnl  [dbh], [DBH library], [yes])
-LIBDBH_CFLAGS=
-LIBDBH_LIBS=
-AC_SUBST([LIBDBH_CFLAGS])
-AC_SUBST([LIBDBH_LIBS])
 
 dnl Configure the mcs plugin
 XFCE_MCS_PLUGIN([XFCE_MCS_MANAGER], [4.0.0])
