add Slovak translations from Juraj Brosz <Juraj.Brosz@pobox.sk>
(Old svn revision: 4115)

--- a/Makefile.in
+++ b/Makefile.in
@@ -230,6 +230,7 @@ conf_DATA = \
 	xfce4rc.nl 							\
 	xfce4rc.ro							\
 	xfce4rc.ru							\
+	xfce4rc.sk							\
 	xfce4rc.vi
 
 EXTRA_DIST = \
