--- a/Makefile.am
+++ b/Makefile.am
@@ -12,6 +12,7 @@ conf_DATA = 								\
 	xfce4rc.nl 							\
 	xfce4rc.ro							\
 	xfce4rc.ru							\
+	xfce4rc.sk							\
 	xfce4rc.vi
 
 EXTRA_DIST = 								\
