--- a/xfce4.spec.in
+++ b/xfce4.spec.in
@@ -65,10 +65,11 @@ rm -rf $RPM_BUILD_ROOT
 %{_sysconfdir}/xfce4/
 %{_datadir}/xfce4/doc/
 %{_datadir}/locale/
+%{_datadir}/applications
+%{_datadir}/icons
 %{_includedir}/xfce4/
 %{_libdir}/xfce4/mcs-plugins/
 %{_libdir}/pkgconfig/
 %{_bindir}/*
-%{_datadir}/xfce4/themes/
 %{_libdir}/xfce4/panel-plugins/
 
