--- a/panel/Makefile.in
+++ b/panel/Makefile.in
@@ -63,8 +63,7 @@ am_xfce4_panel_OBJECTS = xfce4_panel-add-control-dialog.$(OBJEXT) \
 	xfce4_panel-main.$(OBJEXT) xfce4_panel-mcs_client.$(OBJEXT) \
 	xfce4_panel-panel.$(OBJEXT) xfce4_panel-popup.$(OBJEXT) \
 	xfce4_panel-settings.$(OBJEXT) \
-	xfce4_panel-xfce_support.$(OBJEXT) \
-	xfce4_panel-xfcombo.$(OBJEXT)
+	xfce4_panel-xfce_support.$(OBJEXT)
 xfce4_panel_OBJECTS = $(am_xfce4_panel_OBJECTS)
 xfce4_panel_DEPENDENCIES =
 DEFAULT_INCLUDES = -I. -I$(srcdir) -I$(top_builddir)
@@ -82,8 +81,7 @@ am__depfiles_maybe = depfiles
 @AMDEP_TRUE@	./$(DEPDIR)/xfce4_panel-panel.Po \
 @AMDEP_TRUE@	./$(DEPDIR)/xfce4_panel-popup.Po \
 @AMDEP_TRUE@	./$(DEPDIR)/xfce4_panel-settings.Po \
-@AMDEP_TRUE@	./$(DEPDIR)/xfce4_panel-xfce_support.Po \
-@AMDEP_TRUE@	./$(DEPDIR)/xfce4_panel-xfcombo.Po
+@AMDEP_TRUE@	./$(DEPDIR)/xfce4_panel-xfce_support.Po
 COMPILE = $(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) \
 	$(CPPFLAGS) $(AM_CFLAGS) $(CFLAGS)
 LTCOMPILE = $(LIBTOOL) --mode=compile $(CC) $(DEFS) \
@@ -271,9 +269,7 @@ xfce4_panel_SOURCES = \
 	settings.h 						\
 	xfce.h 							\
 	xfce_support.c 						\
-	xfce_support.h						\
-	xfcombo.c 						\
-	xfcombo.h
+	xfce_support.h
 
 xfce4_panelincludedir = $(includedir)/xfce4/panel
 xfce4_panelinclude_HEADERS = \
@@ -400,7 +396,6 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/xfce4_panel-popup.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/xfce4_panel-settings.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/xfce4_panel-xfce_support.Po@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/xfce4_panel-xfcombo.Po@am__quote@
 
 .c.o:
 @am__fastdepCC_TRUE@	if $(COMPILE) -MT $@ -MD -MP -MF "$(DEPDIR)/$*.Tpo" -c -o $@ $<; \
@@ -737,30 +732,6 @@ xfce4_panel-xfce_support.lo: xfce_support.c
 @AMDEP_TRUE@@am__fastdepCC_FALSE@	depfile='$(DEPDIR)/xfce4_panel-xfce_support.Plo' tmpdepfile='$(DEPDIR)/xfce4_panel-xfce_support.TPlo' @AMDEPBACKSLASH@
 @AMDEP_TRUE@@am__fastdepCC_FALSE@	$(CCDEPMODE) $(depcomp) @AMDEPBACKSLASH@
 @am__fastdepCC_FALSE@	$(LIBTOOL) --mode=compile $(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(xfce4_panel_CFLAGS) $(CFLAGS) -c -o xfce4_panel-xfce_support.lo `test -f 'xfce_support.c' || echo '$(srcdir)/'`xfce_support.c
-
-xfce4_panel-xfcombo.o: xfcombo.c
-@am__fastdepCC_TRUE@	if $(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(xfce4_panel_CFLAGS) $(CFLAGS) -MT xfce4_panel-xfcombo.o -MD -MP -MF "$(DEPDIR)/xfce4_panel-xfcombo.Tpo" -c -o xfce4_panel-xfcombo.o `test -f 'xfcombo.c' || echo '$(srcdir)/'`xfcombo.c; \
-@am__fastdepCC_TRUE@	then mv -f "$(DEPDIR)/xfce4_panel-xfcombo.Tpo" "$(DEPDIR)/xfce4_panel-xfcombo.Po"; else rm -f "$(DEPDIR)/xfce4_panel-xfcombo.Tpo"; exit 1; fi
-@AMDEP_TRUE@@am__fastdepCC_FALSE@	source='xfcombo.c' object='xfce4_panel-xfcombo.o' libtool=no @AMDEPBACKSLASH@
-@AMDEP_TRUE@@am__fastdepCC_FALSE@	depfile='$(DEPDIR)/xfce4_panel-xfcombo.Po' tmpdepfile='$(DEPDIR)/xfce4_panel-xfcombo.TPo' @AMDEPBACKSLASH@
-@AMDEP_TRUE@@am__fastdepCC_FALSE@	$(CCDEPMODE) $(depcomp) @AMDEPBACKSLASH@
-@am__fastdepCC_FALSE@	$(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(xfce4_panel_CFLAGS) $(CFLAGS) -c -o xfce4_panel-xfcombo.o `test -f 'xfcombo.c' || echo '$(srcdir)/'`xfcombo.c
-
-xfce4_panel-xfcombo.obj: xfcombo.c
-@am__fastdepCC_TRUE@	if $(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(xfce4_panel_CFLAGS) $(CFLAGS) -MT xfce4_panel-xfcombo.obj -MD -MP -MF "$(DEPDIR)/xfce4_panel-xfcombo.Tpo" -c -o xfce4_panel-xfcombo.obj `if test -f 'xfcombo.c'; then $(CYGPATH_W) 'xfcombo.c'; else $(CYGPATH_W) '$(srcdir)/xfcombo.c'; fi`; \
-@am__fastdepCC_TRUE@	then mv -f "$(DEPDIR)/xfce4_panel-xfcombo.Tpo" "$(DEPDIR)/xfce4_panel-xfcombo.Po"; else rm -f "$(DEPDIR)/xfce4_panel-xfcombo.Tpo"; exit 1; fi
-@AMDEP_TRUE@@am__fastdepCC_FALSE@	source='xfcombo.c' object='xfce4_panel-xfcombo.obj' libtool=no @AMDEPBACKSLASH@
-@AMDEP_TRUE@@am__fastdepCC_FALSE@	depfile='$(DEPDIR)/xfce4_panel-xfcombo.Po' tmpdepfile='$(DEPDIR)/xfce4_panel-xfcombo.TPo' @AMDEPBACKSLASH@
-@AMDEP_TRUE@@am__fastdepCC_FALSE@	$(CCDEPMODE) $(depcomp) @AMDEPBACKSLASH@
-@am__fastdepCC_FALSE@	$(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(xfce4_panel_CFLAGS) $(CFLAGS) -c -o xfce4_panel-xfcombo.obj `if test -f 'xfcombo.c'; then $(CYGPATH_W) 'xfcombo.c'; else $(CYGPATH_W) '$(srcdir)/xfcombo.c'; fi`
-
-xfce4_panel-xfcombo.lo: xfcombo.c
-@am__fastdepCC_TRUE@	if $(LIBTOOL) --mode=compile $(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(xfce4_panel_CFLAGS) $(CFLAGS) -MT xfce4_panel-xfcombo.lo -MD -MP -MF "$(DEPDIR)/xfce4_panel-xfcombo.Tpo" -c -o xfce4_panel-xfcombo.lo `test -f 'xfcombo.c' || echo '$(srcdir)/'`xfcombo.c; \
-@am__fastdepCC_TRUE@	then mv -f "$(DEPDIR)/xfce4_panel-xfcombo.Tpo" "$(DEPDIR)/xfce4_panel-xfcombo.Plo"; else rm -f "$(DEPDIR)/xfce4_panel-xfcombo.Tpo"; exit 1; fi
-@AMDEP_TRUE@@am__fastdepCC_FALSE@	source='xfcombo.c' object='xfce4_panel-xfcombo.lo' libtool=yes @AMDEPBACKSLASH@
-@AMDEP_TRUE@@am__fastdepCC_FALSE@	depfile='$(DEPDIR)/xfce4_panel-xfcombo.Plo' tmpdepfile='$(DEPDIR)/xfce4_panel-xfcombo.TPlo' @AMDEPBACKSLASH@
-@AMDEP_TRUE@@am__fastdepCC_FALSE@	$(CCDEPMODE) $(depcomp) @AMDEPBACKSLASH@
-@am__fastdepCC_FALSE@	$(LIBTOOL) --mode=compile $(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(xfce4_panel_CFLAGS) $(CFLAGS) -c -o xfce4_panel-xfcombo.lo `test -f 'xfcombo.c' || echo '$(srcdir)/'`xfcombo.c
 
 mostlyclean-libtool:
 	-rm -f *.lo
