Build fix (today's lesson: test before you commit)
(Old svn revision: 4122)

--- a/panel/Makefile.in
+++ b/panel/Makefile.in
@@ -283,8 +283,7 @@ xfce4_panelinclude_HEADERS = \
 	item_dialog.h						\
 	plugins.h 						\
 	xfce_support.h 						\
-	xfce.h 							\
-	xfcombo.h
+	xfce.h
 
 xfce4_panel_CFLAGS = \
 	-I$(top_srcdir)							\
